--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Models\ChapterAndVerseReferenceSelection.cs" />
     <Compile Include="Models\ChapterAndVerseSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Views\Commentary\ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
