--- a/QuranX.Persistence/packages.config
+++ b/QuranX.Persistence/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Lucene.Net" version="3.0.3" targetFramework="net471" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net471" />
   <package id="SharpZipLib" version="1.0.0" targetFramework="net471" />
   <package id="System.Configuration.ConfigurationManager" version="4.5.0" targetFramework="net471" />
