--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -201,6 +201,7 @@
     <Compile Include="Models\ChapterAndVerseSelection.cs" />
     <Compile Include="Models\CommentariesForVerse.cs" />
     <Compile Include="Models\CommentatorAndCommentary.cs" />
+    <Compile Include="Models\SelectChapterAndVerse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Views\Commentary\ViewModel.cs" />
     <Compile Include="Views\QuranVerses\ViewModel.cs" />
@@ -234,6 +235,7 @@
     <Content Include="App_Data\_4.tis" />
     <None Include="Properties\PublishProfiles\PetePlayground - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\debounce.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
