--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -185,26 +185,26 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
-    <Compile Include="Builders\CommentariesForVerseBuilder.cs" />
+    <Compile Include="Controllers\VerseCommentaryController.cs" />
+    <Compile Include="Factories\CommentariesForVerseFactory.cs" />
     <Compile Include="Consts.cs" />
-    <Compile Include="Controllers\CommentaryController.cs" />
     <Compile Include="Controllers\CommentatorsController.cs" />
     <Compile Include="Controllers\HadithCollectionsController.cs" />
     <Compile Include="Controllers\QuranVersesController.cs" />
     <Compile Include="Controllers\RedirectController.cs" />
-    <Compile Include="Controllers\VerseCommentaryController.cs" />
+    <Compile Include="Controllers\VerseCommentariesController.cs" />
+    <Compile Include="Factories\SelectChapterAndVerseFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ChapterAndVerseRangeReferenceSelection.cs" />
     <Compile Include="Models\ChapterAndVerseReferenceSelection.cs" />
     <Compile Include="Models\ChapterAndVerseSelection.cs" />
     <Compile Include="Models\CommentariesForVerse.cs" />
     <Compile Include="Models\CommentatorAndCommentary.cs" />
     <Compile Include="Models\SelectChapterAndVerse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Views\Commentary\ViewModel.cs" />
     <Compile Include="Views\QuranVerses\ViewModel.cs" />
+    <Compile Include="Views\VerseCommentary\ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -259,11 +259,11 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\QuranVerses\Index.cshtml" />
     <Content Include="Views\Commentators\Index.cshtml" />
-    <Content Include="Views\Commentary\Index.cshtml" />
-    <Content Include="Views\VerseCommentary\Index.cshtml" />
+    <Content Include="Views\VerseCommentaries\Index.cshtml" />
     <Content Include="Views\Shared\CommentaryView.cshtml" />
     <Content Include="Views\HadithCollections\Index.cshtml" />
     <Content Include="Views\Shared\SelectChapterAndVerse.cshtml" />
+    <Content Include="Views\VerseCommentary\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Redirect\" />
