--- a/QuranX.Web/QuranX.Web.csproj
+++ b/QuranX.Web/QuranX.Web.csproj
@@ -221,7 +221,7 @@
     </Compile>
     <Compile Include="Views\HadithIndex\HadithIndexHeaderViewModel.cs" />
     <Compile Include="Views\HadithIndex\HadithsViewModel.cs" />
-    <Compile Include="Views\HadithIndex\IndexPartsViewModel.cs" />
+    <Compile Include="Views\HadithIndex\BrowseHadithIndexViewModel.cs" />
     <Compile Include="Views\QuranVerses\Index.generated.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -307,6 +307,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\HadithIndex\Hadiths.cshtml" />
     <Content Include="Views\HadithIndex\HadithIndexHeader.cshtml" />
+    <Content Include="Views\HadithIndex\BrowseHadithIndex.cshtml" />
     <None Include="Views\Shared\Error.cshtml">
       <Generator>RazorGenerator</Generator>
       <LastGenOutput>Error.generated.cs</LastGenOutput>
